<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <RadioGroup
        android:id="@+id/dark_mode_radio_group"
        style="@style/settingsRadioGroup">

        <RadioButton
            android:id="@+id/dark_mode_on"
            style="@style/settingsRadioButton"
            android:text="@string/dark_mode_on" />

        <RadioButton
            android:id="@+id/dark_mode_off"
            style="@style/settingsRadioButton"
            android:text="@string/dark_mode_off" />

        <RadioButton
            android:id="@+id/dark_mode_system"
            style="@style/settingsRadioButton"
            android:text="@string/dark_mode_system" />

    </RadioGroup>

</layout>
