<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <RadioGroup
        android:id="@+id/audio_sample_rate_radio_group"
        style="@style/settingsRadioGroup">

        <RadioButton
            android:id="@+id/audio_sample_rate_32000"
            style="@style/settingsRadioButton"
            android:text="@string/audio_config_sample_rate_32000" />

        <RadioButton
            android:id="@+id/audio_sample_rate_44100"
            style="@style/settingsRadioButton"
            android:text="@string/audio_config_sample_rate_44100" />

        <RadioButton
            android:id="@+id/audio_sample_rate_48000"
            style="@style/settingsRadioButton"
            android:text="@string/audio_config_sample_rate_48000" />

    </RadioGroup>

</layout>
